# open-stitch

./: .env.example  .gitignore  DEV_SETUP.md  Dockerfile  Makefile  README.md  SPEC.md  TEAM_CLIENT.env.example  TUNNEL_GUIDE.md  docker-compose.yaml  mypy.graph.ini  pyproject.toml
.claude/skills/frontend-design/: SKILL.md
client/: INTEGRATION_NOTES.md  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css
client/src copy/app/: routes.tsx
client/src copy/app/screens/: Assembly.tsx  Auth.tsx  Landing.tsx  Progress.tsx  Upload.tsx
client/src copy/imports/: open-stitch-app-design.md
client/src copy/styles/: theme.css
client/src/components/: ClarifyChat.tsx  DevNav.tsx  DriveUploader.tsx  ProgressTimeline.tsx  TraceDetailPanel.tsx  TraceTree.tsx  TraceTreeModal.tsx  VideoCard.tsx  VideoPlayer.tsx
client/src/components/nodes/: AgentNode.tsx  CollapsedNode.tsx  PhaseNode.tsx  ToolNode.tsx
client/src/components/ui/: scroll-area.tsx
client/src/hooks/: useAutoLayout.ts  useDrive.ts  useGoogleDriveAuth.ts  useProject.ts  useSocket.ts  useTraceEvents.ts
client/src/lib/: api.ts  drive.ts  driveUploadFlow.ts
client/src/pages/: Auth.tsx  FinalRender.tsx  Landing.tsx  Login.tsx  Progress.tsx  Review.tsx  Select.tsx  Setup.tsx  Upload.tsx  VisualizingProgress.tsx
client/src/stores/: devStore.ts  traceStore.ts
client/src/types/: gis.d.ts  trace.ts
config/: agents.yaml  media_profiles.yaml  models.yaml  subtitle_styles.yaml
config/prompts/: graph_clarification.txt  graph_final_qa.txt  graph_internal_verification.txt  graph_planning.txt  graph_research.txt  graph_synthesis.txt  graph_user_verification.txt  vlm_edit_grade.txt
docs/: GRAPH_DEVELOPER.md  GRAPH_EVENT_TAXONOMY.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/traces/: page.tsx
frontend/src/components/canvas/: AgentNode.tsx  CanvasPanel.tsx  ToolNode.tsx  VideoNode.tsx  graph-layout.ts
frontend/src/components/common/: ProgressBadge.tsx  StatusDot.tsx
frontend/src/components/sidebar/: ClipPreview.tsx  SidebarPanel.tsx  StylePrompt.tsx  UploadZone.tsx  VideoCard.tsx
frontend/src/components/traces/: PhoenixEmbed.tsx
frontend/src/hooks/: useProjectState.ts  useWebSocket.ts
frontend/src/lib/: api.ts  sync.ts
frontend/src/remotion/: Root.tsx  TimelineComposition.tsx
relay/: __init__.py  config.py  main.py
relay/cloudflared/: config.example.yml  config.fullstack.example.yml
sandbox/: Dockerfile  package.json  sandbox-server.js
sandbox/remotion-compositions/: AudioLayer.tsx  ImageSlide.tsx  KineticSubtitle.tsx  MemeOverlay.tsx  Root.tsx  TimelineComposition.tsx  TransitionEffect.tsx  VideoLayer.tsx  package.json  tsconfig.json
server/: __init__.py  config.py  events.py  main.py
server/agents/: asset_search.py  clarifying.py  editing.py  tools.py
server/drive/: auth.py  client.py
server/graph/: __init__.py  artifacts.py  base.py  events.py  graph.py  runtime.py  state.py  tools.py  tracing.py  validators.py
server/graph/nodes/: __init__.py  clarification.py  editing_synthesis.py  final_qa.py  internal_verification.py  planning.py  remotion_synthesis.py  research.py  shared.py  synthesis.py  user_verification.py
server/ingestion/: asr.py  pipeline.py  summary.py  vlm.py
server/routes/: auth.py  drive.py  jobs.py  projects.py
server/sandbox/: client.py  manager.py
server/schemas/: __init__.py  composition.py  project.py  video.py
server/storage/: db.py  objects.py
src/autovid/: __init__.py  config.py
src/autovid/agents/: assembly.py  composition_state.py  director.py  meme_sfx.py  music.py  publishing.py  react_loop.py  remotion_tools.py  subtitle.py
src/autovid/api/: app.py
src/autovid/api/routes/: clips.py  jobs.py  projects.py  social.py
src/autovid/ingestion/: asr_worker.py  audio_analyzer.py  chunker.py  pipeline.py  vlm_worker.py
src/autovid/media/: audio_mixer.py  ffmpeg_tools.py
src/autovid/models/: contracts.py
src/autovid/models/adapters/: llama_local.py  qwen35_vl.py  whisper_local.py
src/autovid/sandbox/: client.py  manager.py  schemas.py  tools.py
src/autovid/schemas/: __init__.py  chunk.py  clip_spec.py  composition.py  meme.py  music.py  project.py  timeline.py  transcript.py  vlm.py
src/autovid/social/: auth.py  instagram.py  tiktok.py  youtube.py
src/autovid/storage/: chunk_store.py  db.py  object_store.py
tests/: test_graph_clarification_nodes.py  test_graph_edit_pipeline.py  test_graph_state.py  test_graph_tools.py  test_projects_graph_routes.py  test_relay.py
tools/: api_tester.py  test_all.sh  test_e2e.py  test_ingestion.py
