[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autovid"
version = "0.1.0"
description = "Agentic, model-pluggable short-form video editing platform"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Open-Stitch Team" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    # ─── API ────────────────────────────────────────────
    "fastapi>=0.115.0,<1.0",
    "python-multipart>=0.0.20,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "websockets>=13.0,<15.0",

    # ─── Database ───────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.35,<3.0",
    "asyncpg>=0.30.0,<1.0",

    # ─── Object Storage ────────────────────────────────
    "minio>=7.2.0,<8.0",

    # ─── ASR ────────────────────────────────────────────
    "faster-whisper>=1.1.0,<2.0",

    # ─── Data / Config ──────────────────────────────────
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",
    "pyyaml>=6.0.2,<7.0",

    # ─── HTTP Client ────────────────────────────────────
    "httpx>=0.27.0,<1.0",

    # ─── Agent Orchestration ────────────────────────────
    "langgraph>=0.2.62,<1.0",

    # ─── Container ──────────────────────────────────────
    "docker>=7.1.0,<8.0",

    # ─── Google APIs ────────────────────────────────────
    "google-api-python-client>=2.150.0,<3.0",
    "google-auth-oauthlib>=1.2.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "pytest-cov>=6.0.0,<7.0",
    "ruff>=0.7.0,<1.0",
    "mypy>=1.13.0,<2.0",
    "pre-commit>=4.0.0,<5.0",
]

[project.scripts]
autovid = "server.main:main"
autovid-relay = "relay.main:main"

[tool.hatch.build.targets.wheel]
packages = ["server", "relay"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
